tests/baselines/reference/checkJsdocTypeTag2.errors.txt
tests/cases/conformance/jsdoc/0.js(3,5): error TS2322: Type '为真' is not assignable to type '文字'.
tests/cases/conformance/jsdoc/0.js(6,5): error TS2322: Type '"hello"' is not assignable to type '数字'.
tests/cases/conformance/jsdoc/0.js(10,4): error TS2345: Argument of type '"string"' is not assignable to parameter of type '数字'.
tests/cases/conformance/jsdoc/0.js(17,1): error TS2322: Type '数字' is not assignable to type '文字'.
tests/cases/conformance/jsdoc/0.js(20,21): error TS2339: Property 'concat' does not exist on type '数字'.
tests/cases/conformance/jsdoc/0.js(24,7): error TS2322: Type '(a: 数字) => 数字' is not assignable to type '(arg0: 数字) => 文字'.
  Type '数字' is not assignable to type '文字'.


==== tests/cases/conformance/jsdoc/0.js (6 errors) ====
    // @ts-check
    /** @type {String} */
    var S = true;
        ~
!!! error TS2322: Type '为真' is not assignable to type '文字'.
    
    /** @type {number} */
    var n = "hello";
        ~
!!! error TS2322: Type '"hello"' is not assignable to type '数字'.
    
    /** @type {function (number)} */
    const x1 = (a) => a + 1;
    x1("string");
       ~~~~~~~~
!!! error TS2345: Argument of type '"string"' is not assignable to parameter of type '数字'.
    
    /** @type {function (number): number} */
    const x2 = (a) => a + 1;
    
    /** @type {string} */
    var a;
    a = x2(0);
    ~
!!! error TS2322: Type '数字' is not assignable to type '文字'.
    
    /** @type {function (number): number} */
    const x3 = (a) => a.concat("hi");
                        ~~~~~~
!!! error TS2339: Property 'concat' does not exist on type '数字'.
    x3(0);
    
    /** @type {function (number): string} */
    const x4 = (a) => a + 1;
          ~~
!!! error TS2322: Type '(a: 数字) => 数字' is not assignable to type '(arg0: 数字) => 文字'.
!!! error TS2322:   Type '数字' is not assignable to type '文字'.
    x4(0);